[gd_scene load_steps=19 format=2]

[ext_resource path="res://main/game/world/scripts/projectiles.gd" type="Script" id=1]
[ext_resource path="res://main/game/scripts/players.gd" type="Script" id=2]
[ext_resource path="res://main/game/world/world.gd" type="Script" id=3]
[ext_resource path="res://entities/soldier/assets/bar-bg.png" type="Texture" id=4]
[ext_resource path="res://entities/soldier/assets/bar-fill.png" type="Texture" id=5]
[ext_resource path="res://levels/terrain.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/m5x7-48-outline-4.tres" type="DynamicFont" id=7]
[ext_resource path="res://main/game/world/scripts/hud.gd" type="Script" id=8]
[ext_resource path="res://entities/soldier/player/soldier_player.tscn" type="PackedScene" id=9]
[ext_resource path="res://main/game/world/enemies.gd" type="Script" id=10]
[ext_resource path="res://assets/m5x7-16-outline2.tres" type="DynamicFont" id=11]
[ext_resource path="res://libs/gt_replace_label/gt_replace_label.gd" type="Script" id=12]
[ext_resource path="res://menus/menus/overlay_menu/overlay_menu.tscn" type="PackedScene" id=13]
[ext_resource path="res://main/game/world/enemy_spawn_manager.gd" type="Script" id=17]
[ext_resource path="res://libs/gt_random_point_area_2d/gt_random_point_area_2d.gd" type="Script" id=18]

[sub_resource type="Animation" id=1]
resource_name = "darken"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("dark_overlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.784314 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("top:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("bottom:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "default"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("dark_overlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("top:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("bottom:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 256, 50 )

[node name="World" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="OverlayMenu" parent="." instance=ExtResource( 13 )]

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 8 )

[node name="root" type="Control" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="dark_overlay" type="ColorRect" parent="HUD/root"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 1024, 1024 )
rect_scale = Vector2( 1.00427, 1.02486 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="top" type="Control" parent="HUD/root"]
anchor_right = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="row" type="HBoxContainer" parent="HUD/root/top"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
__meta__ = {
"_edit_lock_": true
}

[node name="vbox" type="VBoxContainer" parent="HUD/root/top/row"]
margin_right = 108.0
margin_bottom = 80.0
__meta__ = {
"_edit_lock_": true
}

[node name="enemies_label" type="Label" parent="HUD/root/top/row/vbox"]
margin_right = 108.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 7 )
text = "Kills: 0"
script = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}
original_text = "Kills: %s"

[node name="time_label" type="Label" parent="HUD/root/top/row/vbox"]
margin_top = 42.0
margin_right = 108.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 7 )
text = "Time: 0"
script = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}
original_text = "Time: %s"

[node name="bottom" type="Control" parent="HUD/root"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -128.0
__meta__ = {
"_edit_lock_": true
}

[node name="row" type="HBoxContainer" parent="HUD/root/bottom"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="HUD/root/bottom/row"]
margin_left = 85.0
margin_right = 145.0
margin_bottom = 128.0
alignment = 2
__meta__ = {
"_edit_lock_": true
}

[node name="angle_label" type="Label" parent="HUD/root/bottom/row/vbox"]
margin_top = 102.0
margin_right = 60.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 12
custom_fonts/font = ExtResource( 11 )
text = "TESTE"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="vbox2" type="VBoxContainer" parent="HUD/root/bottom/row"]
margin_left = 149.0
margin_right = 919.0
margin_bottom = 128.0
alignment = 2
__meta__ = {
"_edit_lock_": true
}

[node name="charge_bar" type="TextureProgress" parent="HUD/root/bottom/row/vbox2"]
margin_top = 98.0
margin_right = 770.0
margin_bottom = 128.0
size_flags_vertical = 8
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/root"]
autoplay = "default"
anims/darken = SubResource( 1 )
anims/default = SubResource( 2 )

[node name="EnemySpawnManager" type="Node2D" parent="."]
script = ExtResource( 17 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpawnTimer" type="Timer" parent="EnemySpawnManager"]
wait_time = 5.0

[node name="Timer" type="Timer" parent="EnemySpawnManager"]
wait_time = 100.0
one_shot = true

[node name="RandomSpawnArea" type="Area2D" parent="EnemySpawnManager"]
position = Vector2( 736, 82 )
script = ExtResource( 18 )
__meta__ = {
"_edit_lock_": true
}

[node name="1" type="CollisionShape2D" parent="EnemySpawnManager/RandomSpawnArea"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Terrain" parent="." instance=ExtResource( 6 )]

[node name="Projectiles" type="Node2D" parent="."]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Players" type="Node2D" parent="."]
z_index = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="1" parent="Players" instance=ExtResource( 9 )]
position = Vector2( 90, 60 )

[node name="Enemies" type="Node2D" parent="."]
script = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="player_died" from="." to="OverlayMenu" method="emit_signal" binds= [ "player_died" ]]
[connection signal="player_died" from="." to="EnemySpawnManager/SpawnTimer" method="stop"]
[connection signal="player_died" from="." to="HUD/root/AnimationPlayer" method="play" binds= [ "darken" ]]
[connection signal="player_died" from="." to="Enemies" method="_on_World_player_died"]
[connection signal="ready" from="." to="EnemySpawnManager" method="initial_spawn"]
[connection signal="update_game_over_info" from="." to="OverlayMenu" method="update_info"]
[connection signal="update_kills" from="." to="HUD" method="_on_World_update_kills"]
[connection signal="update_time" from="." to="HUD" method="_on_World_update_time"]
[connection signal="update_kills_label" from="HUD" to="HUD/root/top/row/vbox/enemies_label" method="apply_text"]
[connection signal="update_time_label" from="HUD" to="HUD/root/top/row/vbox/time_label" method="apply_text"]
[connection signal="enemy_died" from="EnemySpawnManager" to="." method="_on_EnemySpawnManager_enemy_died"]
[connection signal="timeout" from="EnemySpawnManager/SpawnTimer" to="EnemySpawnManager" method="spawn_enemy"]
[connection signal="terrain_updated" from="Terrain" to="." method="_on_Level_terrain_updated"]
[connection signal="terrain_updated" from="Terrain" to="Players" method="_on_Level_terrain_updated"]
[connection signal="terrain_updated" from="Terrain" to="Enemies" method="_on_Level_terrain_updated"]
[connection signal="projectile_exploded" from="Projectiles" to="Terrain" method="_on_Projectiles_projectile_exploded"]
[connection signal="projectile_exploded" from="Projectiles" to="." method="_on_Projectiles_projectile_exploded"]
[connection signal="angle_updated" from="Players/1" to="HUD" method="_on_Player_angle_updated"]
[connection signal="charge_updated" from="Players/1" to="HUD" method="_on_Player_charge_updated"]
[connection signal="hurt" from="Players/1" to="." method="_on_Player_died"]
[connection signal="weapon_shoot" from="Players/1" to="HUD" method="_on_Player_weapon_shoot"]
